// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: transform slot > default slot with v-for directive 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createForSlots as _createForSlots, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, {
    $: [
      () => (_createForSlots(_ctx.list, (item) => ({
        name: "default",
        fn: () => {
          const n0 = t0()
          _renderEffect(() => _setText(n0, _toDisplayString(item)))
          return n0
        }
      })))
    ]
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > default slot with v-if directive 1`] = `
"import { createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, {
    $: [
      () => (_ctx.show
        ? {
          name: "default",
          fn: () => {
            return []
          }
        }
        : void 0)
    ]
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > dynamic slots name 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("foo", 2)

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, {
    $: [
      () => ({
        name: _ctx.name,
        fn: () => {
          const n0 = t0()
          return n0
        }
      })
    ]
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > dynamic slots name w/ v-for 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createForSlots as _createForSlots, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, {
    $: [
      () => (_createForSlots(_ctx.list, (item) => ({
        name: item,
        fn: (_slotProps0) => {
          const n0 = t0()
          _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.bar)))
          return n0
        }
      })))
    ]
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > dynamic slots name w/ v-for and provide absent key 1`] = `
"import { createForSlots as _createForSlots, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("foo", 2)

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, {
    $: [
      () => (_createForSlots(_ctx.list, (_, __, index) => ({
        name: index,
        fn: () => {
          const n0 = t0()
          return n0
        }
      })))
    ]
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > dynamic slots name w/ v-if / v-else[-if] 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("condition slot", 2)
const t1 = _template("another condition", 2)
const t2 = _template("else condition", 2)

export function render(_ctx) {
  const n6 = _createAssetComponent("Comp", null, {
    $: [
      () => (_ctx.condition
        ? {
          name: "condition",
          fn: () => {
            const n0 = t0()
            return n0
          }
        }
        : _ctx.anotherCondition
          ? {
            name: "condition",
            fn: (_slotProps0) => {
              const n2 = t1()
              return n2
            }
          }
          : {
            name: "condition",
            fn: () => {
              const n4 = t2()
              return n4
            }
          })
    ]
  }, true)
  return n6
}"
`;

exports[`compiler: transform slot > forwarded slots > <slot w/ nested component> 1`] = `
"import { resolveComponent as _resolveComponent, createSlot as _createSlot, extend as _extend, createComponentWithFallback as _createComponentWithFallback } from 'vue';

export function render(_ctx) {
  const _component_Comp = _resolveComponent("Comp")
  const n2 = _createComponentWithFallback(_component_Comp, null, () => {
    const n1 = _createComponentWithFallback(_component_Comp, null, _extend(() => {
      const n0 = _createSlot("default", null, null, 4)
      return n0
    }, { _: 8 }))
    return n1
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > forwarded slots > <slot> tag only 1`] = `
"import { createSlot as _createSlot, extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createSlot("default", null, null, 4)
    return n0
  }, { _: 8 }), true)
  return n1
}"
`;

exports[`compiler: transform slot > forwarded slots > <slot> tag w/ template 1`] = `
"import { createSlot as _createSlot, extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createSlot("default", null, null, 4)
    return n0
  }, { _: 8 }), true)
  return n2
}"
`;

exports[`compiler: transform slot > forwarded slots > <slot> tag w/ v-for 1`] = `
"import { createSlot as _createSlot, createFor as _createFor, extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n3 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createFor(() => (_ctx.b), (_for_item0) => {
      const n2 = _createSlot("default", null, null, 4)
      return n2
    }, undefined, 48)
    return n0
  }, { _: 8 }), true)
  return n3
}"
`;

exports[`compiler: transform slot > forwarded slots > <slot> tag w/ v-if 1`] = `
"import { createSlot as _createSlot, createIf as _createIf, extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n3 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createIf(() => (_ctx.ok), () => {
      const n2 = _createSlot("default", null, null, 4)
      return n2
    }, null, 129 /* BLOCK_SHAPE, SLOT_ROOT */)
    return n0
  }, { _: 8 }), true)
  return n3
}"
`;

exports[`compiler: transform slot > implicit default slot 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>", 2)

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, () => {
    const n0 = t0()
    return n0
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > named slots w/ implicit default slot 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("foo", 2)
const t1 = _template("bar", 2)
const t2 = _template("<span>", 2)

export function render(_ctx) {
  const n4 = _createAssetComponent("Comp", null, {
    "one": () => {
      const n0 = t0()
      return n0
    },
    "default": () => {
      const n2 = t1()
      const n3 = t2()
      return [n2, n3]
    }
  }, true)
  return n4
}"
`;

exports[`compiler: transform slot > nested component should not inherit parent slots 1`] = `
"import { resolveComponent as _resolveComponent, extend as _extend, createComponentWithFallback as _createComponentWithFallback, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const _component_Bar = _resolveComponent("Bar")
  const n2 = _createAssetComponent("Foo", null, {
    "header": _extend(() => {
      return []
    }, { _: 8 }),
    "default": () => {
      const n1 = _createComponentWithFallback(_component_Bar)
      return n1
    }
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > nested slots scoping 1`] = `
"import { resolveComponent as _resolveComponent, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createComponentWithFallback as _createComponentWithFallback, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const _component_Inner = _resolveComponent("Inner")
  const n5 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n1 = _createComponentWithFallback(_component_Inner, null, (_slotProps1) => {
      const n0 = t0()
      _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.foo + _slotProps1.bar + _ctx.baz)))
      return n0
    })
    const n3 = t0()
    _renderEffect(() => _setText(n3, " " + _toDisplayString(_slotProps0.foo + _ctx.bar + _ctx.baz)))
    return [n1, n3]
  }, true)
  return n5
}"
`;

exports[`compiler: transform slot > on component dynamically named slot 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, {
    $: [
      () => ({
        name: _ctx.named,
        fn: (_slotProps0) => {
          const n0 = t0()
          _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.foo + _ctx.bar)))
          return n0
        }
      })
    ]
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > on component named slot 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, {
    "named": (_slotProps0) => {
      const n0 = t0()
      _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.foo + _ctx.bar)))
      return n0
    }
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > on-component default slot 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.foo + _ctx.bar)))
    return n0
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > quote slot name 1`] = `
"import { extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, {
    "nav-bar-title-before": _extend(() => {
      return []
    }, { _: 8 })
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > slot + v-if / v-else[-if] should not cause error 1`] = `
"import { resolveComponent as _resolveComponent, setInsertionState as _setInsertionState, createSlot as _createSlot, createComponentWithFallback as _createComponentWithFallback, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const _component_Foo = _resolveComponent("Foo")
  const _component_Bar = _resolveComponent("Bar")
  const n6 = t0()
  _setInsertionState(n6, null, 0)
  const n0 = _createSlot("foo")
  _setInsertionState(n6, null, 1)
  const n1 = _createIf(() => (true), () => {
    const n3 = _createComponentWithFallback(_component_Foo)
    return n3
  }, () => {
    const n5 = _createComponentWithFallback(_component_Bar)
    return n5
  }, 21 /* BLOCK_SHAPE, ONCE */)
  return n6
}"
`;

exports[`compiler: transform slot > slot fast path > component root is stable 1`] = `
"import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const _component_B = _resolveComponent("B")
  const n1 = _createAssetComponent("A", null, () => {
    const n0 = _createComponentWithFallback(_component_B)
    return n0
  }, true)
  return n1
}"
`;

exports[`compiler: transform slot > slot fast path > non-root v-if under stable template root is stable 1`] = `
"import { setInsertionState as _setInsertionState, createIf as _createIf, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<span>", 2)
const t1 = _template("<div>")

export function render(_ctx) {
  const n4 = _createAssetComponent("Comp", null, () => {
    const n3 = t1()
    _setInsertionState(n3, null, 0)
    const n0 = _createIf(() => (_ctx.show), () => {
      const n2 = t0()
      return n2
    })
    return n3
  }, true)
  return n4
}"
`;

exports[`compiler: transform slot > slot fast path > root slot outlet fallback is non-stable 1`] = `
"import { createIf as _createIf, createSlot as _createSlot, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<span>", 2)

export function render(_ctx) {
  const n5 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createSlot("default", null, () => {
      const n2 = _createIf(() => (_ctx.show), () => {
        const n4 = t0()
        return n4
      }, null, 129 /* BLOCK_SHAPE, SLOT_ROOT */)
      return n2
    }, 4)
    return n0
  }, { _: 8 }), true)
  return n5
}"
`;

exports[`compiler: transform slot > slot fast path > root v-for slot content is non-stable 1`] = `
"import { createFor as _createFor, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<span>")

export function render(_ctx) {
  const n3 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createFor(() => (_ctx.list), (_for_item0) => {
      const n2 = t0()
      return n2
    }, undefined, 40)
    return n0
  }, { _: 8 }), true)
  return n3
}"
`;

exports[`compiler: transform slot > slot fast path > root v-if slot content is non-stable 1`] = `
"import { createIf as _createIf, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<span>", 2)

export function render(_ctx) {
  const n3 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createIf(() => (_ctx.show), () => {
      const n2 = t0()
      return n2
    }, null, 129 /* BLOCK_SHAPE, SLOT_ROOT */)
    return n0
  }, { _: 8 }), true)
  return n3
}"
`;

exports[`compiler: transform slot > slot fast path > runtime dynamic component root is non-stable 1`] = `
"import { createDynamicComponent as _createDynamicComponent, extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createDynamicComponent(() => (_ctx.view), null, null, 4)
    return n0
  }, { _: 8 }), true)
  return n1
}"
`;

exports[`compiler: transform slot > slot owner context > dynamic slot source with slot outlet keeps dynamic slot function 1`] = `
"import { createSlot as _createSlot, createForSlots as _createForSlots, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, {
    $: [
      () => (_createForSlots(_ctx.slots, (_, name) => ({
        name: name,
        fn: () => {
          const n0 = _createSlot(() => (name), null, null, 4)
          return n0
        }
      })))
    ]
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot owner context > slot with component inside v-for is non-stable 1`] = `
"import { resolveComponent as _resolveComponent, setInsertionState as _setInsertionState, createComponentWithFallback as _createComponentWithFallback, createFor as _createFor, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx) {
  const _component_ChildComp = _resolveComponent("ChildComp")
  const n5 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createFor(() => (_ctx.items), (_for_item0) => {
      const n3 = t0()
      _setInsertionState(n3, null, 0)
      const n2 = _createComponentWithFallback(_component_ChildComp)
      return n3
    }, undefined, 40)
    return n0
  }, { _: 8 }), true)
  return n5
}"
`;

exports[`compiler: transform slot > slot owner context > slot with component inside v-if is non-stable 1`] = `
"import { resolveComponent as _resolveComponent, setInsertionState as _setInsertionState, createComponentWithFallback as _createComponentWithFallback, createIf as _createIf, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx) {
  const _component_ChildComp = _resolveComponent("ChildComp")
  const n5 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createIf(() => (_ctx.show), () => {
      const n3 = t0()
      _setInsertionState(n3, null, 0)
      const n2 = _createComponentWithFallback(_component_ChildComp)
      return n3
    }, null, 129 /* BLOCK_SHAPE, SLOT_ROOT */)
    return n0
  }, { _: 8 }), true)
  return n5
}"
`;

exports[`compiler: transform slot > slot owner context > slot with component is stable 1`] = `
"import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const _component_ChildComp = _resolveComponent("ChildComp")
  const n2 = _createAssetComponent("Comp", null, () => {
    const n0 = _createComponentWithFallback(_component_ChildComp)
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot owner context > slot with custom element inside v-if is non-stable 1`] = `
"import { setInsertionState as _setInsertionState, createPlainElement as _createPlainElement, createIf as _createIf, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx) {
  const n5 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createIf(() => (_ctx.show), () => {
      const n3 = t0()
      _setInsertionState(n3, null, 0)
      const n2 = _createPlainElement("my-element")
      return n3
    }, null, 129 /* BLOCK_SHAPE, SLOT_ROOT */)
    return n0
  }, { _: 8 }), true)
  return n5
}"
`;

exports[`compiler: transform slot > slot owner context > slot with custom element is stable 1`] = `
"import { createPlainElement as _createPlainElement, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, () => {
    const n0 = _createPlainElement("my-element")
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot owner context > slot with dynamic root and stable sibling is stable 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createFor as _createFor, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<span> ")
const t1 = _template("<i>tail", 2)

export function render(_ctx) {
  const n5 = _createAssetComponent("Comp", null, () => {
    const n0 = _createFor(() => (_ctx.items), (_for_item0) => {
      const n2 = t0()
      const x2 = _txt(n2)
      _renderEffect(() => _setText(x2, _toDisplayString(_for_item0.value)))
      return n2
    }, undefined, 8)
    const n3 = t1()
    const x0 = _txt(n0)
    _renderEffect(() => _setText(x0, _toDisplayString(_ctx.item)))
    return [n0, n3]
  }, true)
  return n5
}"
`;

exports[`compiler: transform slot > slot owner context > slot with nested v-if containing component is non-stable 1`] = `
"import { resolveComponent as _resolveComponent, setInsertionState as _setInsertionState, createComponentWithFallback as _createComponentWithFallback, createIf as _createIf, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<span>")
const t1 = _template("<div>")

export function render(_ctx) {
  const _component_ChildComp = _resolveComponent("ChildComp")
  const n8 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createIf(() => (_ctx.a), () => {
      const n6 = t1()
      _setInsertionState(n6, null, 0)
      const n2 = _createIf(() => (_ctx.b), () => {
        const n5 = t0()
        _setInsertionState(n5, null, 0)
        const n4 = _createComponentWithFallback(_component_ChildComp)
        return n5
      })
      return n6
    }, null, 129 /* BLOCK_SHAPE, SLOT_ROOT */)
    return n0
  }, { _: 8 }), true)
  return n8
}"
`;

exports[`compiler: transform slot > slot owner context > slot with only static elements is stable 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>static content", 2)

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, () => {
    const n0 = t0()
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot owner context > slot with only text interpolation is stable 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, () => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_ctx.message)))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot owner context > slot with slot outlet is non-stable 1`] = `
"import { createSlot as _createSlot, extend as _extend, createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createSlot("default", null, null, 4)
    return n0
  }, { _: 8 }), true)
  return n2
}"
`;

exports[`compiler: transform slot > slot owner context > slot with v-for but no component is non-stable 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createFor as _createFor, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div> ")

export function render(_ctx) {
  const n4 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createFor(() => (_ctx.items), (_for_item0) => {
      const n2 = t0()
      const x2 = _txt(n2)
      _renderEffect(() => _setText(x2, _toDisplayString(_for_item0.value)))
      return n2
    }, undefined, 40)
    const x0 = _txt(n0)
    _renderEffect(() => _setText(x0, _toDisplayString(_ctx.item)))
    return n0
  }, { _: 8 }), true)
  return n4
}"
`;

exports[`compiler: transform slot > slot owner context > slot with v-if but no component is non-stable 1`] = `
"import { createIf as _createIf, extend as _extend, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>content", 2)
const t1 = _template("<span>fallback", 2)

export function render(_ctx) {
  const n7 = _createAssetComponent("Comp", null, _extend(() => {
    const n0 = _createIf(() => (_ctx.show), () => {
      const n2 = t0()
      return n2
    }, () => {
      const n4 = t1()
      return n4
    }, 389 /* BLOCK_SHAPE, SLOT_ROOT, INDEX_SHIFT */)
    return n0
  }, { _: 8 }), true)
  return n7
}"
`;

exports[`compiler: transform slot > slot prop alias uses original key 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.msg)))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop array rest destructuring 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.arr.slice(1)[0])))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop computed key destructuring 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0[_ctx.key])))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop default value 1`] = `
"import { getDefaultValue as _getDefaultValue, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_getDefaultValue(_slotProps0.foo, () => (1)))))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop nested default value 1`] = `
"import { getDefaultValue as _getDefaultValue, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_getDefaultValue(_slotProps0.foo[0], () => (1)) + _getDefaultValue(_slotProps0.baz.qux, () => (2)))))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop nested destructuring 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.foo.bar)))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop rest destructuring 1`] = `
"import { getRestElement as _getRestElement, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_getRestElement(_slotProps0, ["foo"]).bar)))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > slot prop rest with computed keys preserved 1`] = `
"import { getRestElement as _getRestElement, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n2 = _createAssetComponent("Comp", null, (_slotProps0) => {
    const n0 = t0()
    _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.foo + _getRestElement(_slotProps0, ["foo", _ctx.key]).other)))
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transform slot > with whitespace: 'preserve' > implicit default slot 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" Header ", 2)
const t1 = _template(" ", 2)
const t2 = _template("<p>", 2)

export function render(_ctx) {
  const n4 = _createAssetComponent("Comp", null, {
    "header": () => {
      const n0 = t0()
      return n0
    },
    "default": () => {
      const n2 = t1()
      const n3 = t2()
      return [n2, n3]
    }
  }, true)
  return n4
}"
`;

exports[`compiler: transform slot > with whitespace: 'preserve' > named default slot + implicit whitespace content 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" Header ", 2)
const t1 = _template(" Default ", 2)

export function render(_ctx) {
  const n5 = _createAssetComponent("Comp", null, {
    "header": () => {
      const n0 = t0()
      return n0
    },
    "default": () => {
      const n3 = t1()
      return n3
    }
  }, true)
  return n5
}"
`;

exports[`compiler: transform slot > with whitespace: 'preserve' > should not generate whitespace only default slot 1`] = `
"import { createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" Header ", 2)
const t1 = _template(" Footer ", 2)

export function render(_ctx) {
  const n5 = _createAssetComponent("Comp", null, {
    "header": () => {
      const n0 = t0()
      return n0
    },
    "footer": () => {
      const n3 = t1()
      return n3
    }
  }, true)
  return n5
}"
`;
